--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,26 +2,42 @@
     width: 40px;
 }
 
-.navbar {
 
+.navbar {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 40px 120px;
+    color: white;
 }
 
+
 .navbar-links {
-    display: flex; /* Arrange links horizontally */
-    list-style: none; /* Remove bullet points */
+    display: flex; 
+    list-style: none; 
     padding: 0;
     margin: 0;
-    gap: 20px; /* Space between links */
+    gap: 20px; 
     text-align: center;
+    /* background-color: white; */
   }
   
   .nav-link {
-    text-decoration: none; /* Remove default link styles */
-    color: black; /* Change link color */
+    text-decoration: none; 
+    color: black; 
     font-size: 16px;
     padding: 10px 15px;
   }
   
+  .listing-link {
+    border-radius: 50px;
+    padding: 10px 38px;
+    background: white;
+    color: #262626;
+
+  }
+
   .nav-link:hover {
-    color: grey; /* Change color on hover */
+    color: grey; 
     text-decoration: underline;
