--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 }
 
 .hero-text {
-    color: black;
+    color: white;
     font-size: 110px;
     font-weight: 500;
     line-height: 130px;
@@ -75,4 +75,9 @@
 
 .hero-dot.orange{
     background-color: orangered;
+}
+
+.product-page{
+    width: 300px;
+    height: 300px;
 }
