--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 *{
     margin: 0;
     padding: 0;
@@ -78,6 +80,22 @@
 }
 
 .product-page{
-    width: 300px;
-    height: 300px;
+   
+}
+
+.product {
+    
+    list-style: none;
+    padding: 15px 9%;
+    padding-bottom: 100px;
+    border: ;
+}
+
+.product img {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+    width: 250px;
+    height: 250px;
+    
+    
 }
