--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
 
 *{
 
-    font-family: ;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+a {
+    text-decoration: none;
 }
 
 
@@ -91,7 +95,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 40px 120px;
+    padding: 40px 120px;
     color: white;
 }
 
@@ -124,3 +128,26 @@
   .nav-link:hover {
     color: grey; 
     text-decoration: underline;}
+
+    .toggle-button {
+        display: flex;
+    }
+
+    .toggle-button span {
+        color: #000;
+    }
+
+    .product {
+        text-align: center;
+    }
+
+    .product img {
+        width: 100%;
+        height: 300px;
+        object-fit: contain;
+    }
+
+    .buttons a {
+    border: none;
+    border-radius: 0;
+ }
