--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ a {
     
 }
 
-.how {
+/* .how {
     display: flex;
     align-items: center;
     gap: 50px;
@@ -57,7 +57,7 @@ a {
     font-size: 20px;
     font-weight: 500;
 
-}
+} */
 
 .hero-page-move {
     margin-top: 120px;
@@ -97,7 +97,8 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 60px;
+    padding: 2px 60px;
+    height: 50px;
     color: white;
     background: white;
 }
@@ -110,6 +111,10 @@ a {
     margin: 0;
     gap: 20px; 
     text-align: center;
+    border-radius: 30px;
+    padding: 2px 38px;
+    background: white;
+    color: #262626;
     /* background-color: white; */
   }
   
